--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -493,7 +493,7 @@
                                                               maxlength="2000">
                                                     </textarea>
                                                     <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 characters are allowed.</span>
-                                                    <p>Remaining Characters : <span id="remainingCharacters">2000</span></p>
+                                                    <p id="requestNotesRemainingCharacters">Remaining Characters : <span id="remainingCharacters">2000</span></p>
                                                 </div>
                                             </div>
                                         </div>
