Recap-678 : Added customer code in search fields dropdown.

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -52,6 +52,7 @@
                                             <option value="ISSN">ISSN</option>
                                             <option value="OCLCNumber">OCLC Number</option>
                                             <option value="Notes">Notes</option>
+                                            <option value="CustomerCode">Customer Code</option>
                                             <option value="CallNumber_search">Call Number</option>
                                             <option value="Barcode">Barcode</option>
                                         </select>
