--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,7 +53,7 @@
                             </form>
                         </div>
                         <form class="form-horizontal"  method="get" th:action="@{/login-scsb}" action="#" id="home_login"
-                              th:object="${userForm}">
+                              th:object="${userForm}" style="padding-bottom: 30px;">
                             <h2 class="heading">Login</h2>
 
                             <div class="form-group">
@@ -85,6 +85,9 @@
                                         <button type="submit" id="submitBtn" class="btn btn-default themed-button">
                                             Submit
                                         </button>
+                                        <div style="padding-left: 200px;margin-top: -35px;">
+                                            <a href="mailto:recap-support@htcindia.com" target="_top">Get in touch with us</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
